--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,20 @@
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "face-api.js": "^0.22.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.4"
+    "mongoose": "^8.16.4",
+    "multer": "^2.0.2",
+    "opencv.js": "^1.2.1",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
