Remove sensitive data from .env file
Cleared sensitive information from environment variables.

--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ PORT=5000
 FRONTEND_URL=http://localhost:5173
 
 # MongoDB Configuration - CHANGE THIS to your Atlas connection string
-MONGODB_URI=mongodb+srv://pradheep:wPbCf4Lq4uPfS9mO@fitmind.yon7d7f.mongodb.net/
+MONGODB_URI=
 
 # JWT Configuration - REQUIRED for authentication
 JWT_SECRET=your-super-secret-jwt-key-here-make-it-long-and-random
@@ -16,7 +16,7 @@ JWT_EXPIRE=7d
 
 # AI Service Configuration (Optional)
 # Get your Gemini API key from: https://aistudio.google.com/app/apikey
-GEMINI_API_KEY=AIzaSyDFg-uhxaJnZ17QpDK5EgKbYDwvVNxgc2M
+GEMINI_API_KEY=
 
 # Set to 'true' to use mock AI analysis instead of Gemini API
 USE_MOCK_AI=false
